Cambio de flex a grid en bloque place

--- a/index.html
+++ b/index.html
@@ -110,16 +110,11 @@
               Natalia Dolgushina, productora de contenidos
             </li>
           </ul>
-          <div class="place__graphics">
-            <img
-              src="images/__image-Kiev.jpg"
-              alt="Ciudad de Kiev en Ucrania"
-              class="place__image"
-            />
-            <button type="button" class="place__button">
-              Compra esta obra de arte como NFT
-            </button>
-          </div>
+          <img
+            src="images/__image-Kiev.jpg"
+            alt="Ciudad de Kiev en Ucrania"
+            class="place__image"
+          />
           <ul class="place__description">
             <p class="place__paragraph">
               Kiev (o Kyiv), la capital de Ucrania, es una gran ciudad situada a
@@ -139,6 +134,9 @@
               gente que vive en las afueras de la derecha.
             </p>
           </ul>
+          <button type="button" class="place__button">
+            Compra esta obra de arte como NFT
+          </button>
         </div>
         <div class="place">
           <h2 class="place__title">Criccieth, Gales</h2>
@@ -149,16 +147,11 @@
               Kseniya Glagoleva, directora del proyecto
             </li>
           </ul>
-          <div class="place__graphics">
-            <img
-              src="images/__image-criccieth.jpg"
-              alt="Ciudad de Criccieth en Gales"
-              class="place__image"
-            />
-            <button type="button" class="place__button">
-              Compra esta obra de arte como NFT
-            </button>
-          </div>
+          <img
+            src="images/__image-criccieth.jpg"
+            alt="Ciudad de Criccieth en Gales"
+            class="place__image"
+          />
           <ul class="place__description">
             <p class="place__paragraph">
               La ruina medieval del castillo de Criccieth domina la ciudad desde
@@ -179,23 +172,23 @@
               Reino Unido.
             </p>
           </ul>
+          <button type="button" class="place__button">
+            Compra esta obra de arte como NFT
+          </button>
         </div>
         <div class="place">
-          <h2 class="place__title">Berea, Estados Unidos</h2>
+          <h2 class="place__title" width: 584px>
+            Berea, Estados Unidos
+          </h2>
           <ul class="place__website">
             <li class="place__url-heading">Artista</li>
             <li class="place__artist">Travis Turner, autor y editor</li>
           </ul>
-          <div class="place__graphics">
-            <img
-              src="images/__image-berea.jpg"
-              alt="Ciudad de Berea en Estados Unidos"
-              class="place__image"
-            />
-            <button type="button" class="place__button">
-              Compra esta obra de arte como NFT
-            </button>
-          </div>
+          <img
+            src="images/__image-berea.jpg"
+            alt="Ciudad de Berea en Estados Unidos"
+            class="place__image"
+          />
           <ul class="place__description">
             <p class="place__paragraph">
               Berea es una pequeña ciudad situada en la parte central de
@@ -216,6 +209,9 @@
               completa.
             </p>
           </ul>
+          <button type="button" class="place__button">
+            Compra esta obra de arte como NFT
+          </button>
         </div>
         <div class="place">
           <h2 class="place__title">Muramvya, Burundi</h2>
@@ -223,16 +219,11 @@
             <li class="place__url-heading">Artista</li>
             <li class="place__artist">Grevisse Kenguruka, editor técnico</li>
           </ul>
-          <div class="place__graphics">
-            <img
-              src="images/__image-muramvya.jpg"
-              alt="Ciudad de Muramvya en Burundi"
-              class="place__image"
-            />
-            <button type="button" class="place__button">
-              Compra esta obra de arte como NFT
-            </button>
-          </div>
+          <img
+            src="images/__image-muramvya.jpg"
+            alt="Ciudad de Muramvya en Burundi"
+            class="place__image"
+          />
           <ul class="place__description">
             <p class="place__paragraph">
               Muramvya es una de las 18 provincias de Burundi. En la época del
@@ -260,6 +251,9 @@
               proporcionan agua en todo el país
             </p>
           </ul>
+          <button type="button" class="place__button">
+            Compra esta obra de arte como NFT
+          </button>
         </div>
         <div class="place">
           <h2 class="place__title">CDMX, México</h2>
@@ -267,16 +261,11 @@
             <li class="place__url-heading">Artista</li>
             <li class="place__artist">Thania Palma, desarrollador web</li>
           </ul>
-          <div class="place__graphics">
-            <img
-              src="images/__image-cdmx.jpg"
-              alt="Ciudad de México en México"
-              class="place__image"
-            />
-            <button type="button" class="place__button">
-              Compra esta obra de arte como NFT
-            </button>
-          </div>
+          <img
+            src="images/__image-cdmx.jpg"
+            alt="Ciudad de México en México"
+            class="place__image"
+          />
           <ul class="place__description">
             <p class="place__paragraph">
               La Ciudad de México es la capital del país y una de las ciudades
@@ -296,6 +285,9 @@
               países del mundo.
             </p>
           </ul>
+          <button type="button" class="place__button">
+            Compra esta obra de arte como NFT
+          </button>
         </div>
       </section>
       <section class="cover">
