Corrección y aplicación de media queries

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="stylesheet" href="./pages/fonts.css" />
     <link rel="shortcut-icon" href="Icongallery.ico" />
+    <link rel="icon" type="image/x-icon" href="Icongallery.ico" />
   </head>
   <body class="page">
     <header class="header">
@@ -116,15 +117,15 @@
             class="place__image"
           />
           <ul class="place__description">
-            <p class="place__paragraph">
+            <li class="place__paragraph">
               Kiev (o Kyiv), la capital de Ucrania, es una gran ciudad situada a
               orillas del río Dniéper. Por supuesto, nadie en su sano juicio se
               bañaría en el río, a menos que se haya criado aquí, en cuyo caso
               probablemente lo haya intentado en algún momento. Los veranos son
               calurosos aquí, y los inviernos con fuertes corrientes de aire,
               pero el otoño y la primavera son absolutamente increíbles.
-            </p>
-            <p class="place__paragraph">
+            </li>
+            <li class="place__paragraph">
               La ciudad en sí es una mezcla de arquitectura prerrevolucionaria,
               de posguerra y soviética, toda ella salpicada de balcones
               modificados. Si te encuentras en la orilla derecha del Dniéper, el
@@ -132,11 +133,14 @@
               las que llevan tacones. Sin embargo, la orilla izquierda es
               considerada mucho menos interesante y prestigiosa, incluso por la
               gente que vive en las afueras de la derecha.
-            </p>
+            </li>
           </ul>
-          <button type="button" class="place__button">
+          <a
+            href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            class="place__button"
+          >
             Compra esta obra de arte como NFT
-          </button>
+          </a>
         </div>
         <div class="place">
           <h2 class="place__title">Criccieth, Gales</h2>
@@ -153,15 +157,15 @@
             class="place__image"
           />
           <ul class="place__description">
-            <p class="place__paragraph">
+            <li class="place__paragraph">
               La ruina medieval del castillo de Criccieth domina la ciudad desde
               una roca que se adentra en el mar. Se cree que fue construido por
               Llewelyn el Grande en el siglo XIII. Unos 900 años después, la
               autodenominada *Perla de Gales a orillas de Snowdonia* se ha
               convertido en un popular destino turístico durante los meses de
               verano.
-            </p>
-            <p class="place__paragraph">
+            </li>
+            <li class="place__paragraph">
               A poca distancia del castillo, se puede disfrutar del mejor helado
               del mundo en Cadwalader's, cuyo ingrediente secreto se rumorea que
               son las algas de la zona. Otro reclamo a la fama es el hecho de
@@ -170,16 +174,17 @@
               alrededor de la ciudad. También fue el hogar de David Lloyd
               George, el único galés que ocupó el cargo de Primer Ministro del
               Reino Unido.
-            </p>
+            </li>
           </ul>
-          <button type="button" class="place__button">
+          <a
+            href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            class="place__button"
+          >
             Compra esta obra de arte como NFT
-          </button>
+          </a>
         </div>
         <div class="place">
-          <h2 class="place__title" width: 584px>
-            Berea, Estados Unidos
-          </h2>
+          <h2 class="place__title place__title-large">Berea, Estados Unidos</h2>
           <ul class="place__website">
             <li class="place__url-heading">Artista</li>
             <li class="place__artist">Travis Turner, autor y editor</li>
@@ -190,7 +195,7 @@
             class="place__image"
           />
           <ul class="place__description">
-            <p class="place__paragraph">
+            <li class="place__paragraph">
               Berea es una pequeña ciudad situada en la parte central de
               Kentucky. La ciudad está rodeada de hermosos bosques y campos. Es
               conocida como la capital del arte y la artesanía del estado, y los
@@ -199,19 +204,22 @@
               estudios de vidrio y mucho más. La ciudad celebra cada año un
               festival en el que se festeja el "spoonbread", un plato local
               hecho con pan de maíz y servido con una cuchara de madera.
-            </p>
-            <p class="place__paragraph">
+            </li>
+            <li class="place__paragraph">
               Sin embargo, es probablemente más conocido por la universidad
               local Berea College se fundó en 1855 y fue la primera universidad
               del sur de EE.UU. en estar integrada racialmente, así como la
               primera en ser coeducativa. De manera singular, no cobra
               matrícula: todos los estudiantes reciben una beca de matrícula
               completa.
-            </p>
+            </li>
           </ul>
-          <button type="button" class="place__button">
+          <a
+            href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            class="place__button"
+          >
             Compra esta obra de arte como NFT
-          </button>
+          </a>
         </div>
         <div class="place">
           <h2 class="place__title">Muramvya, Burundi</h2>
@@ -225,23 +233,23 @@
             class="place__image"
           />
           <ul class="place__description">
-            <p class="place__paragraph">
+            <li class="place__paragraph">
               Muramvya es una de las 18 provincias de Burundi. En la época del
               reino, Muramvya era la capital real y en 2007, por su cultura y
               paisaje natural, fue incluida en la lista indicativa del
               Patrimonio Cultural Mundial de la UNESCO. Está situada en el
               centro de Burundi, entre las capitales política y económica del
               país.
-            </p>
-            <p class="place__paragraph">
+            </li>
+            <li class="place__paragraph">
               El clima es más bien frío por la noche, pero durante el día,
               creerás que estás en el paraíso. A 2.665 metros sobre el nivel del
               mar, el monte Teza es uno de los lugares más fríos de la
               provincia. Pero esa brisa fresca permite el crecimiento de una de
               las mayores plantaciones de té y café del país, que constituyen la
               mayor parte de las exportaciones de Burundi.
-            </p>
-            <p class="place__paragraph">
+            </li>
+            <li class="place__paragraph">
               El Parque Nacional de Kibira, una de las mayores reservas de fauna
               silvestre para simios, se extiende por cuatro provincias, incluida
               Muramvya. Este Parque Nacional se encuentra en el vértice de las
@@ -249,11 +257,14 @@
               los 1.550 y los 2.660 metros de altitud. Está lleno de hermosa
               vegetación, y es una fuente para los diversos ríos y arroyos que
               proporcionan agua en todo el país
-            </p>
+            </li>
           </ul>
-          <button type="button" class="place__button">
+          <a
+            href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            class="place__button"
+          >
             Compra esta obra de arte como NFT
-          </button>
+          </a>
         </div>
         <div class="place">
           <h2 class="place__title">CDMX, México</h2>
@@ -267,14 +278,14 @@
             class="place__image"
           />
           <ul class="place__description">
-            <p class="place__paragraph">
+            <li class="place__paragraph">
               La Ciudad de México es la capital del país y una de las ciudades
               más pobladas del mundo, sus habitantes y visitantes suelen
               considerarla un lugar caótico, aunque en el caos también se suele
               encontrar particular belleza; es una de las ciudades más altas del
               mundo con 2240 metros sobre el nivel del mar.
-            </p>
-            <p class="place__paragraph">
+            </li>
+            <li class="place__paragraph">
               Ubicada en el centro del país, se encuentra rodeada de valles,
               montañas y volcanes, como el volcán Iztaccíhuatl y el Popocatéptl,
               eternos enamorados, según la leyenda local. Es el centro político,
@@ -283,27 +294,35 @@
               atracciones, además de constantes muestras gastronómicas o
               culturales que suelen tener como invitados especiales a diversos
               países del mundo.
-            </p>
+            </li>
           </ul>
-          <button type="button" class="place__button">
+          <a
+            href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            class="place__button"
+          >
             Compra esta obra de arte como NFT
-          </button>
+          </a>
         </div>
       </section>
       <section class="cover">
-        <div class="cover__section">
+        <div class="cover__content">
           <img
             src="images/__cover.jpg"
             alt="Imagen de fondo, galería de arte"
             class="cover__image"
           />
-        </div>
-        <div class="cover__text">
-          <h2 class="cover__title">Visítanos</h2>
-          <p class="cover__info">Todo el año</p>
-          <p class="cover__info">Galería de arte Practicum</p>
-          <p class="cover__info">404, Avenida Tim Berners-Lee.</p>
-          <button type="button" class="cover__button">Comprar entradas</button>
+          <div class="cover__text">
+            <h2 class="cover__title">Visítanos</h2>
+            <p class="cover__info">Todo el año</p>
+            <p class="cover__info">Galería de arte Practicum</p>
+            <p class="cover__info">404, Avenida Tim Berners-Lee.</p>
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="cover__button"
+            >
+              Comprar entradas
+            </a>
+          </div>
         </div>
       </section>
     </main>
