Modificación 2 a revisión final

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <img src="./images/__logo.png" alt="Logo_gallery" class="logo" />
+      <img src="images/PAG__logo.png" alt="Logo_gallery" class="logo" />
       <h1 class="header__title">De patria a patria</h1>
       <p class="header__description">
         Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
@@ -111,7 +111,7 @@
             </li>
           </ul>
           <img
-            src="images/__image-Kiev.jpg"
+            src="images/place__image-Kiev.jpg"
             alt="Ciudad de Kiev en Ucrania"
             class="place__image"
           />
@@ -151,7 +151,7 @@
             </li>
           </ul>
           <img
-            src="images/__image-criccieth.jpg"
+            src="images/place__image-criccieth.jpg"
             alt="Ciudad de Criccieth en Gales"
             class="place__image"
           />
@@ -189,7 +189,7 @@
             <li class="place__artist">Travis Turner, autor y editor</li>
           </ul>
           <img
-            src="images/__image-berea.jpg"
+            src="images/place__image-berea.jpg"
             alt="Ciudad de Berea en Estados Unidos"
             class="place__image"
           />
@@ -227,7 +227,7 @@
             <li class="place__artist">Grevisse Kenguruka, editor técnico</li>
           </ul>
           <img
-            src="images/__image-muramvya.jpg"
+            src="images/place__image-muramvya.jpg"
             alt="Ciudad de Muramvya en Burundi"
             class="place__image"
           />
@@ -272,7 +272,7 @@
             <li class="place__artist">Thania Palma, desarrollador web</li>
           </ul>
           <img
-            src="images/__image-cdmx.jpg"
+            src="images/place__image-cdmx.jpg"
             alt="Ciudad de México en México"
             class="place__image"
           />
@@ -306,7 +306,7 @@
       <section class="cover">
         <div class="cover__content">
           <img
-            src="images/__cover.jpg"
+            src="images/PAG__cover.jpg"
             alt="Imagen de fondo, galería de arte"
             class="cover__image"
           />
